--- a/style.css
+++ b/style.css
@@ -22,13 +22,20 @@ section.home{
 }
 section.about{
     width: 100%;
-    height: 250px;
+    /* height: 250px; */
     background-color: #9b4819;
     color: #f4f1e8;
     display: flex;
+    flex-direction: column;
     gap: 20px;
     align-items: center;
     justify-content: center;
+}
+.about h2{
+    margin-top: 50px;
+}
+.about img{
+    max-width: 1024px;
 }
 .information{
     width: 1024px;
@@ -127,13 +134,6 @@ section.port{
     flex-wrap: wrap;
 }
 
-.contato{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 350px;
-}
 .audio{
     display: flex;
     align-items: center;
@@ -145,4 +145,14 @@ section.port{
     height: 100px;
     object-fit: cover; /* Garante que a imagem fique bem ajustada */
     border-radius: 10px; /* Bordas arredondadas opcionais */
+}
+
+.contato{
+    background-color: #9b4819;
+    color: #f4f1e8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
 }
